--- a/Pages/UserManagement/Create.cshtml
+++ b/Pages/UserManagement/Create.cshtml
@@ -53,7 +53,7 @@
 
 	<div class="row mb-3">
 		<div class="offset-sm-3 col-sm-3 d-grid">
-			<button type="submit" class="btn btn-primary id=" submitBtn"">Next</button>
+			<button type="submit" class="btn btn-primary" id="submitBtn">Next</button>
 		</div>
 		<div class="col-sm-3 d-grid">
 			<a class="btn btn-outline-primary" href="/UserManagement/Index" role="button">Cancel</a>
