--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -4,7 +4,6 @@
     ViewData["Title"] = "User Management";
 }
 
-<!-- h1 class="text-center display-4">User Management</!-->
 <div class="container">
     <div class="row">
         <div class="col">User Management</div>
@@ -16,22 +15,32 @@
 <table class="table">
     <thead>
         <tr>
-            <th>ID</th>
+            <th></th>
             <th>Username</th>
-            <th>Password</th>
             <th>User Type</th>
-            <!-- th>User Photo</!-->
             <th>Created At</th>
-            <th>Action</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model.listUsers)
         {
             <tr>
-                <td>@item.userID</td>
+                <td>
+                    @if (item.userPhoto != null && item.userPhoto.Length > 0)
+                    {
+                        <div class="user-photo">
+                            <img src="data:image/png;base64,@Convert.ToBase64String(item.userPhoto)" alt="User Photo" width="50" />
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="user-photo">
+                            <img src="~/images/default_userPhoto.jpg" alt="Default User Photo" width="50" />
+                        </div>
+                    }
+                </td>
                 <td>@item.username</td>
-                <td>@item.password</td>
                 <td>@item.userType</td>
                 <td>@item.createdAt</td>
                 <td>
