--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,41 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
-
-:root {
-    --bs-primary-color: #3F8F8B;
+html {
+  font-size: 14px;
 }
 
-
-h1 {
-    font-weight: 700;
-
+@media (min-width: 768px) {
+  html {
+    font-size: 16px;
+  }
 }
 
-h3 {
-    font-weight: 600;
+html {
+  position: relative;
+  min-height: 100%;
 }
 
-h5 {
-    font-weight: 500;
+body {
+  margin-bottom: 60px;
 }
 
-h1, .h1 {
-    font-size: calc(1.375rem + 1.5vw);
+.user-photo {
+    width: 25px;
+    height: 25px;
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
-#disaster-form-container {
-    background-color: #F6F8FB;
-    padding: 20px;
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-    border-radius: 20px;
+.user-photo img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
 }
-
-.button-spacer {
-    text-align: center;
-}
-
-.button-spacer button {
-        margin: 20px 10px; /* Add margin to create spacing between buttons */
-}
-
-
-
