--- a/Pages/Disaster/_AllocateEvacuation Model.cshtml
+++ b/Pages/Disaster/_AllocateEvacuation Model.cshtml
@@ -35,8 +35,8 @@
                         <tr>
                             <th> </th>
                             <th>Evacuation Center</th>
-                            <th>Evacuation Center Type</th>
-                            <th>Max Capacity</th>
+                            <th>Evacuation Center Type<i class="bi bi-arrow-down-circle" style="padding: 5px;"></i></th>
+                            <th>Max Capacity<i class="bi bi-arrow-down-circle" style="padding: 5px;"></i></th>
                         </tr>
 
                         <!-- SAMPLE DATA-->
@@ -47,9 +47,9 @@
                                     <label class="form-check-label" for="evacuationCenter1"></label>
                                 </div>
                             </td>
-                            <td width="20%">Evacuation Center 1</td>
-                            <td width="10%">Type A</td>
-                            <td width="10%">100</td>
+                            <td width="20%">Bayanihan Gymnasium</td>
+                            <td width="20%">Community-Based Evacuation Center</td>
+                            <td width="10%">800</td>
                         </tr>
                 </table>
 
