--- a/wwwroot/css/bootswatch_Zephyr.css
+++ b/wwwroot/css/bootswatch_Zephyr.css
@@ -11,8 +11,7 @@
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
 
 :root,
 [data-bs-theme=light] {
@@ -102,7 +101,7 @@
     --bs-tertiary-color-rgb: 73, 80, 87;
     --bs-tertiary-bg: #f8f9fa;
     --bs-tertiary-bg-rgb: 248, 249, 250;
-    --bs-heading-color: #3F8F8B; /*CHANGED*/
+    --bs-heading-color: var(--bs-primary-color);
     --bs-link-color: #3459e6;
     --bs-link-color-rgb: 52, 89, 230;
     --bs-link-decoration: underline;
@@ -175,7 +174,7 @@
     --bs-danger-border-subtle: #83191c;
     --bs-light-border-subtle: #495057;
     --bs-dark-border-subtle: #343a40;
-    --bs-heading-color: var(--bs-primary-color); /*CHANGED*/
+    --bs-heading-color: inherit;
     --bs-link-color: #859bf0;
     --bs-link-hover-color: #9daff3;
     --bs-link-color-rgb: 133, 155, 240;
@@ -227,7 +226,7 @@ hr {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     margin-top: 0;
     margin-bottom: 0.5rem;
-    font-weight: 600; /*CHANGED*/
+    /*font-weight: 500;*/ /*CHANGED*/
     line-height: 1.2;
     color: var(--bs-heading-color);
 }
@@ -2725,8 +2724,7 @@ textarea.form-control-lg {
 }
 
     .form-check-input[type=checkbox] {
-        width: 1.4em; /* Adjust the width to make the checkbox larger */
-        height: 1.4em; /* CHANGED Adjust the height to make the checkbox larger */
+        border-radius: 0.25em;
     }
 
     .form-check-input[type=radio] {
@@ -2744,8 +2742,8 @@ textarea.form-control-lg {
     }
 
     .form-check-input:checked {
-        background-color: var(--bs-primary);
-        border-color: var(--bs-primary);
+        background-color: #3459e6;
+        border-color: #3459e6;
     }
 
         .form-check-input:checked[type=checkbox] {
@@ -3450,15 +3448,15 @@ textarea.form-control-lg {
 
 .btn-primary {
     --bs-btn-color: #fff;
-    --bs-btn-bg: #3F8F8B;
-    --bs-btn-border-color: #3F8F8B;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #418985;
-    --bs-btn-hover-border-color: #418985;
+    --bs-btn-bg: #3F8F8B; /*CHANGED*/
+    --bs-btn-border-color: #3F8F8B; /*CHANGED*/
+    --bs-btn-hover-color: #3F8F8B; /*CHANGED*/
+    --bs-btn-hover-bg: #D0E8DE; /*CHANGED*/
+    --bs-btn-hover-border-color: #3F8F8B;
     --bs-btn-focus-shadow-rgb: 82, 114, 234;
-    --bs-btn-active-color: #3F8F8B;
-    --bs-btn-active-bg: #3F8F8B;
-    --bs-btn-active-border-color: #3F8F8B;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #3F8F8B; /*CHANGED*/
+    --bs-btn-active-border-color: #3F8F8B; /*CHANGED*/
     --bs-btn-active-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: #3459e6;
@@ -3585,19 +3583,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-    --bs-btn-color: #3F8F8B;
-    --bs-btn-border-color: #3F8F8B;
+    --bs-btn-color: #3F8F8B; /*CHANGED*/
+    --bs-btn-border-color: #3F8F8B; /*CHANGED*/
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #3F8F8B;
-    --bs-btn-hover-border-color: #3F8F8B;
+    --bs-btn-hover-bg: #3F8F8B; /*CHANGED*/
+    --bs-btn-hover-border-color: #3F8F8B; /*CHANGED*/
     --bs-btn-focus-shadow-rgb: 52, 89, 230;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #3F8F8B;
+    --bs-btn-active-bg: #3F8F8B; /*CHANGED*/
     --bs-btn-active-border-color: #3F8F8B;
     --bs-btn-active-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-    --bs-btn-disabled-color: #3F8F8B;
+    --bs-btn-disabled-color: #3459e6;
     --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #3F8F8B;
+    --bs-btn-disabled-border-color: #3459e6;
     --bs-gradient: none;
 }
 
@@ -13912,7 +13910,7 @@ thead th {
     }
 
 .alert .btn-close {
-        color: inherit;    
+    color: inherit;
 }
 
 .badge.bg-secondary, .badge.bg-light {
@@ -13960,20 +13958,4 @@ thead th {
 
 .modal-content {
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-}
-
-/*CHANGED*/
-#disaster-form-container {
-    background-color: #F6F8FB;
-    padding: 20px;
-    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-    border-radius: 20px;
-}
-
-.button-spacer {
-    text-align: center;
-}
-
-.button-spacer button {
-    margin: 20px 10px; /* Add margin to create spacing between buttons */ /* Add margin-top to create spacing between the "Save" button and checkboxes */
 }
