--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -28,7 +28,7 @@
 
 		<div class="col-auto">
 			<div class="d-flex justify-content-end align-items-center">
-				<a asp-page="/EvacuationCenter/_AddEvacuationCenter" class="btn btn-primary mb-2"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Evacuation Center</a>
+				<a class="btn btn-primary mb-2" href="/EvacuationCenter/AddEvacuationCenter"><i class="bi bi-plus-circle pt" style="padding: 5px;"></i> Add Evacuation Center</a>
 			</div>
 		</div>
 	</div>
@@ -55,9 +55,7 @@
 						<td width="20%">
 							<!-- Disaster Log button -->
 							<button class="btn btn-dark"><i class="bi bi-card-list"></i></button>
-							<a class="btn btn-success" href="/EvacuationCenter/EditEvacuationCenter?centerID=@item.centerID"><i class="bi bi-pencil-fill"></i></a>
-							<a class="btn btn-danger" href="/EvacuationCenter/DeleteEvacuationCenter?centerID=@item.centerID"><i class="bi bi-trash-fill"></i></a>
-
+							
 							<!-- Edit button -->
 							<a class="btn btn-success edit-button" href="/EvacuationCenter/EditEvacuationCenter?centerID=@item.centerID">
 								<i class="bi bi-pencil-fill"></i>Edit
