--- a/Pages/UserManagement/AddECStaff.cshtml
+++ b/Pages/UserManagement/AddECStaff.cshtml
@@ -45,7 +45,9 @@
 
                 <!-- MIDDLE NAME -->
                 <div class="row mb-3">
-                    <label class="form-label">Middle Name:</label>
+                    <label class="form-label">
+                        Middle Name:
+                    </label>
                     <input type="text" id="middleName" name="middleName" class="form-control" maxlength="65" />
                 </div>
 
@@ -60,14 +62,16 @@
 
                 <!-- EXTENSION NAME -->
                 <div class="row mb-3">
-                    <label class="form-label">Extension Name</label>
+                    <label class="form-label">
+                        Extension Name:
+                    </label>
                     <input type="text" id="extName" name="extName" class="form-control" maxlength="45" />
                 </div>
 
                 <!-- SEX -->
                 <div class="row mb-3">
                     <label class="form-label">
-                        Sex
+                        Sex:
                         <span class="text-danger" style="padding:5px">*</span>
                     </label>
                     <div class="form-check">
@@ -83,7 +87,7 @@
                 <!-- BIRTHDATE -->
                 <div class="row mb-3">
                     <label class="form-label">
-                        Birthdate
+                        Birthdate:
                         <span class="text-danger" style="padding: 5px">*</span>
                     </label>
                     <input type="date" id="birthdate" name="birthdate" class="form-control" required pattern="\d{4}-\d{2}-\d{2}" />
@@ -92,7 +96,7 @@
                 <!-- MOBILE NUMBER -->
                 <div class="row mb-3">
                     <label class="form-label">
-                        Mobile Number
+                        Mobile Number:
                         <span class="text-danger" style="padding: 5px">*</span>
                     </label>
                     <input type="tel" id="mobileNum" name="mobileNum" class="form-control" required maxlength="11" pattern="[0-9]{11}" placeholder="09XXXXXXXXX" title="Enter digits only." />
@@ -101,7 +105,7 @@
                 <!-- EMAIL ADDRESS -->
                 <div class="row mb-3">
                     <label class="form-label">
-                        Email Address
+                        Email Address:
                         <span class="text-danger" style="padding: 5px">*</span>
                     </label>
                     <input type="email" id="emailAddress" name="emailAddress" class="form-control" required maxlength="65" placeholder="example@email.com" />
