--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -75,7 +75,7 @@
 				{
 					<tr>
 						<td width="30%">@item.centerName</td>
-						<td width="20%">@item.barangayID</td>
+						<td width="10%">@item.barangayID</td>
 						<td width="15%">@item.maxCapacity</td>
 						<td width="15%">
 							@if (@item.status == "Active")
@@ -97,7 +97,7 @@
 							</a>
 
 							<!-- Delete button -->
-							<a href="#" class="btn btn-danger edit-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-deleteid="@item.centerID">
+							<a href="#" class="btn btn-danger edit-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-centerid="@item.centerID">
 								<i class="bi bi-trash-fill"></i>
 							</a>
 						</td>
@@ -117,7 +117,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				Are you sure you want to delete this evacuation center?
+				Are you sure you want to delete this disaster?
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -126,6 +126,26 @@
 		</div>
 	</div>
 </div>
+
+<!-- Confirm Delete -->
+<script>
+	const confirmDeleteButton = document.getElementById('confirmDeleteButton');
+	const deleteButtons = document.querySelectorAll('.edit-button');
+
+	let disasterIdToDelete = null;
+
+	deleteButtons.forEach(function (button) {
+		button.addEventListener('click', function () {
+			centerIdToDelete = this.getAttribute('data-centerid');
+		});
+	});
+
+	confirmDeleteButton.addEventListener('click', function () {
+		if (centerIdToDelete !== null) {
+			window.location.href = "/EvacuationCenter/DeleteEvacuationCenter?centerID=" + centerIdToDelete;
+		}
+	});
+</script>
 
 <!-- Sorting -->
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -162,12 +182,11 @@
 
 <!-- Search -->
 <script>
-	// Search function
 	document.addEventListener("DOMContentLoaded", function () {
 		document.getElementById("search-form").addEventListener("submit", function (e) {
 			e.preventDefault();
 			const query = document.getElementById("search-bar").value;
-			fetch(`/EvacuationCenter?handler=Search&query=${query}`)
+			fetch(`/Disaster?handler=Search&query=${query}`)
 				.then(response => response.json())
 				.then(data => {
 					// Clear existing table rows
@@ -176,26 +195,22 @@
 
 					// Iterate through the search results and add new rows to the table
 					data.forEach(result => {
-						const statusBadge = result.status === "Active" ?
-							`<span class="badge bg-success">Active</span>` :
-							`<span class="badge rounded-pill bg-light">Inactive</span>`;
-						
 						const newRow = `<tr>
-										<td width="30%">${result.centerName}</td>
-										<td width="20%">${result.barangayID}</td>
-										<td width="15%">${result.maxCapacity}</td>
-										<td width="15%">${statusBadge}</td>
+										<td width="20%">${result.disasterName}</td>
+										<td width="15%">${result.disasterType}</td>
+										<td width="25%">${result.description}</td>
+										<td width="15%">${result.dateOccured}</td>
 										<td width="20%">
-											<!-- Disaster Log button -->
-											<button class="btn btn-dark"><i class="bi bi-card-list"></i></button>
+											<!-- Generate Report button -->
+											<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
 
 											<!-- Edit button -->
-											<a class="btn btn-success edit-button" href="/EvacuationCenter/EditEvacuationCenter?centerID=${result.centerID}">
+											<a class="btn btn-success edit-button" href="/Disaster/EditDisaster?disasterID=${result.disasterID}">
 												<i class="bi bi-pencil-fill"></i>
 											</a>
 
 											<!-- Delete button -->
-											<a href="#" class="btn btn-danger edit-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-deleteid="${result.centerID}">
+											<a class="btn btn-danger edit-button" href="#" onclick="confirmDelete(${result.disasterName})">
 												<i class="bi bi-trash-fill"></i>
 											</a>
 										</td>
@@ -207,25 +222,5 @@
 					console.error("Error:", error);
 				});
 		});
-	});
-</script>
-
-<!-- Confirm Delete -->
-<script>
-	const confirmDeleteButton = document.getElementById('confirmDeleteButton');
-	const deleteButtons = document.querySelectorAll('.edit-button');
-
-	let centerIdToDelete = null;
-
-	deleteButtons.forEach(function (button) {
-		button.addEventListener('click', function () {
-			centerIdToDelete = this.getAttribute('data-deleteid');
-		});
-	});
-
-	confirmDeleteButton.addEventListener('click', function () {
-		if (centerIdToDelete !== null) {
-			window.location.href = "/EvacuationCenter/DeleteEvacuationCenter?centerID=" + centerIdToDelete;
-		}
 	});
 </script>
