--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -96,7 +96,8 @@
                             }
 
                             <!-- Delete button -->
-                            <a href="#" class="btn btn-danger edit-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-deleteid="@item.userID">
+                            <a href="#" class="btn btn-danger edit-button" onclick="prepareDelete('@item.userID')"
+                               data-deleteid="@item.userID" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
                                 <i class="bi bi-trash-fill"></i>
                             </a>
                         </td>
@@ -176,7 +177,8 @@
                                             }
 
                                             <!-- Delete button -->
-                                            <a href="#" class="btn btn-danger edit-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-deleteid="${result.userID}">
+                                                <a href="#" class="btn btn-danger edit-button" onclick="prepareDelete('${result.userID}')"
+                                                    data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal">
                                                 <i class="bi bi-trash-fill"></i>
                                             </a>
                                         </td>
@@ -193,9 +195,7 @@
 
 <!-- Confirm Delete -->
 <script>
-    const confirmDeleteButton = document.getElementById('confirmDeleteButton');
     const deleteButtons = document.querySelectorAll('.edit-button');
-
     let userIdToDelete = null;
 
     deleteButtons.forEach(function (button) {
@@ -204,8 +204,20 @@
         });
     });
 
+    // Function to prepare for delete action
+    function prepareDelete(userID) {
+        if (userID === null || userID === undefined) {
+            // Retrieve userID from the button's data-deleteid attribute
+            userIdToDelete = event.currentTarget.getAttribute('data-deleteid');
+        } else {
+            userIdToDelete = userID;
+        }
+    }
+
+    const confirmDeleteButton = document.getElementById('confirmDeleteButton');
+
     confirmDeleteButton.addEventListener('click', function () {
-        if (userIdToDelete != null) {
+        if (userIdToDelete !== null) {
             window.location.href = "/UserManagement/DeleteUser?userID=" + userIdToDelete;
         }
     });
